// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardTitle /> renders correctly with a background 1`] = `
<div
  className="cardTitleContainer"
>
  <div
    className="cardTitleBackground"
    style={
      Object {
        "backgroundImage": "url(test url)",
        "backgroundSize": "cover",
        "marginBottom": "1em",
      }
    }
  />
  <h2
    className="cardTitle text-color-primary"
    style={
      Object {
        "height": "125px",
      }
    }
  >
    Lorem Ipsum
  </h2>
</div>
`;

exports[`<CardTitle /> renders correctly without a background 1`] = `
<div
  className="cardTitleContainer"
>
  <h2
    className="cardTitle text-color-primary"
    style={Object {}}
  >
    Lorem Ipsum
  </h2>
</div>
`;
